@@ -6,6 +6,8 @@
 #include <sys/types.h>   /* various type definitions.            */
 #include <sys/ipc.h>     /* general SysV IPC structures          */
 #include <sys/msg.h>     /* message queue functions and structs. */
+#include <errno.h>
+#include <string.h>
 
 #include <iostream>
 
@@ -40,6 +42,9 @@ namespace evf{
       {
 	int rc;                  /* error code returned by system calls. */
 	rc = msgsnd(queue_id_, ptr.ptr_, ptr.msize()+1,0);
+	if(rc==-1)
+	  std::cout << "snd::Master failed to post message - error:"
+		    << strerror(errno) << std::endl;
 	//	delete ptr;
 	return rc;
       }
@@ -47,20 +52,26 @@ namespace evf{
       {
 	unsigned long msg_type = ptr->mtype;
 	int rc = msgrcv(queue_id_, ptr.ptr_, ptr.msize()+1, ptr->mtype, 0);
-	if (rc == -1) 
+	if (rc == -1 && errno != ENOMSG)  
 	  {
-	    XCEPT_RAISE(evf::Exception, "Master failed to get message from queue");
+	    std::string serr = "rcv::Master failed to get message from queue - error:";
+	    serr += strerror(errno);
+	    XCEPT_RAISE(evf::Exception, serr);
 	  }
+	else if(rc == -1 && errno == ENOMSG) return MSGQ_MESSAGE_TYPE_RANGE;
 	return msg_type;
       }
     unsigned long rcvNonBlocking(MsgBuf &ptr)
       {
 	unsigned long msg_type = ptr->mtype;
 	int rc = msgrcv(queue_id_, ptr.ptr_, ptr.msize()+1, msg_type, IPC_NOWAIT);
-	if (rc == -1) 
+	if (rc == -1 && errno != ENOMSG)  
 	  {
-	    XCEPT_RAISE(evf::Exception, "Master failed to get message from queue");
+	    std::string serr = "rcvnb::Master failed to get message from queue - error:";
+	    serr += strerror(errno);
+	    XCEPT_RAISE(evf::Exception, serr);
 	  }
+	else if(rc == -1 && errno == ENOMSG) return MSGQ_MESSAGE_TYPE_RANGE;
 	return msg_type;
       }
     int disconnect()
