@@ -1,3 +1,9 @@
+2010-05-17  Emilio Meschi <emilio.meschi@cern.ch>
+	
+	* tag V00-18-03
+	* improve exception messages when rcv fails
+	* add missing initialization to some quantities in process reg struct
+	
 2010-04-28  Emilio Meschi <emilio.meschi@cern.ch>
 	
 	* tag V00-18-02 (01 used by Bill)
